k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cliniqflow-api
  labels:
    app: cliniqflow-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cliniqflow-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cliniqflow-api
    spec:
      containers:
        - name: cliniqflow-api
          image: 178647846686.dkr.ecr.ap-south-1.amazonaws.com/cliniqflow-api
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /api/readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
